<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.containertracker.ui.home.HomeFragment"
        android:label="@string/scanner_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_container"
        android:name="com.example.containertracker.ui.container.ContainerFragment"
        android:label="@string/menu_container"
        tools:layout="@layout/fragment_container" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.containertracker.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.containertracker.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_scan_local_sales"
        android:name="com.example.containertracker.ui.localsales.ScanLocalSalesFragment"
        android:label="@string/scanner_title"
        tools:layout="@layout/fragment_scan_local_sales" />

    <fragment
        android:id="@+id/nav_scan_isotank"
        android:name="com.example.containertracker.ui.isotank.ScanIsotankFragment"
        android:label="@string/scan_isotank_title"
        tools:layout="@layout/fragment_scan_isotank" />

    <fragment
        android:id="@+id/nav_scan_marking"
        android:name="com.example.containertracker.ui.marking.ScanMarkingFragment"
        android:label="@string/scan_marking_title"
        tools:layout="@layout/fragment_scan_marking" />

    <fragment
        android:id="@+id/nav_scan_marking_local_sales"
        android:name="com.example.containertracker.ui.marking.ScanMarkingFragment"
        android:label="@string/scan_marking_local_sales_title"
        tools:layout="@layout/fragment_scan_marking_local_sales" />

    <fragment
        android:id="@+id/nav_scan_seal"
        android:name="com.example.containertracker.ui.seal.ScanSealFragment"
        android:label="@string/scan_seal_title"
        tools:layout="@layout/fragment_scan_seal" />

    <fragment
        android:id="@+id/nav_scan_seal_local_sales"
        android:name="com.example.containertracker.ui.seal.ScanSealFragment"
        android:label="@string/scan_seal_local_sales_title"
        tools:layout="@layout/fragment_scan_seal_local_sales" />

    <fragment
        android:id="@+id/nav_scan_flexi"
        android:name="com.example.containertracker.ui.flexi.ScanFlexiFragment"
        android:label="@string/scan_flexi_title"
        tools:layout="@layout/fragment_scan_flexi" />

    <fragment
        android:id="@+id/nav_container_repair"
        android:name="com.example.containertracker.ui.repair.ContainerRepairFragment"
        android:label="@string/container_repair_title"
        tools:layout="@layout/fragment_container_repair" />

    <fragment
        android:id="@+id/nav_container_tally"
        android:name="com.example.containertracker.ui.tally.ScanContainerTallyFragment"
        android:label="@string/scanner_title"
        tools:layout="@layout/fragment_scan_container_tally" />
</navigation>