<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.example.containertracker.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scanner_view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/tvContainerExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_container"
            android:background="@drawable/bg_rounded_capsule_outline_blue"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/home_container_export_label"
            android:textAppearance="@style/Label"
            android:textColor="@color/primaryBlue"
            app:drawableStartCompat="@drawable/ic_check_blue_18dp"
            app:layout_constraintEnd_toStartOf="@id/tvContainerLaden"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvContainerLaden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_rounded_capsule_outline_grey"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/home_container_laden_label"
            android:textAppearance="@style/Label"
            android:textColor="@color/gray_ADABAB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvContainerExport"
            app:layout_constraintTop_toTopOf="@id/tvContainerExport" />

        <FrameLayout
            android:id="@+id/container_scanner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/margin_container"
            app:layout_constraintBottom_toTopOf="@id/button_submit_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContainerExport" />

        <com.example.containertracker.widget.SearchWidget
            android:id="@+id/inputContainerCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/button_submit_container"
            app:layout_constraintEnd_toStartOf="@id/button_submit_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_submit_container"
            app:searchHint="@string/history_serch_hint"
            app:searchWidgetInputText="@={homeViewModel.containerCode}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit_container"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_container"
            android:background="@drawable/background_button_green"
            android:text="@string/general_action_submit"
            android:textAppearance="@style/Button"
            android:textColor="@color/white_FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>